font size on mobile fix

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: #212A37;
     color: #F0F8FF;
     font-family: 'Fira Mono';
-    font-size: larger;
+    font-size: large;
     margin: 40px;
     display: flex;
     justify-content: center;
